# EmbeddedNS-Portable

./: .gitignore  AGENTS.md  ReadMe.md  WebRtc流程图.drawio
Document/: Agent开发规范.md  Bug分析报告.md  NoiseSuppressor_Teaching_Document.md
Document/figures/: generate_figures.py
Original/: AudioProcessing_example.cpp  CMakeLists.txt
Original/AudioProcessing/: NoiseSuppressor.cc  audio_buffer.cc  audio_buffer.h  audio_util.cc  audio_util.h  splitting_filter.cc  splitting_filter.h  three_band_filter_bank.cc
Original/AudioProcessing/ns/: noise_estimator.cc
Original/AudioProcessing/signal_processing/: splitting_filter_c.c
Project/: CMakeLists.txt  ENC_Core.lib  main.cpp
Project/ENC_Core/AudioProcess/: NoiseSuppressor.c  NoiseSuppressor.h  fast_math.c  histograms.h  prior_signal_model.h  signal_model.h  spl_inl.h  suppression_params.c  suppression_params.h  wiener_filter.c  wiener_filter.h
Project/ENC_Core/AudioProcess/Api/: ENC_V.c  ENC_V.h
Project/ENC_Core/AudioProcess/SplitFilter/: SplitFilter.h  three_band_filter_bank.h
Project/test_file/: noisy_48k_sample2.pkf
Project/test_file/kLtrFeatureThr0.8f/: noisy_48k_sample2.pkf
PureC/: CMakeLists.txt
PureC/AudioProcess/: AudioBuffer.c  AudioBuffer.h  fast_math.h  fft_cal_transient.c  histograms.c  noise_estimator.c  noise_estimator.h  ns_common.h  prior_signal_model_estimator.c  prior_signal_model_estimator.h  quantile_noise_estimator.c  signal_model_estimator.c  signal_processing_library.h  speech_probability_estimator.c  suppression_params.h
PureC/AudioProcess/Api/: ENC_V.c  ENC_V.h
PureC/AudioProcess/SplitFilter/: three_band_filter_bank.c
PureC/AudioProcess/base/: checks.h
SpilitFilter/: sparse_fir_filter.h  splitting_filter.c
Webrtc_Source/webrtc-audio-processing-1.0/webrtc/modules/audio_processing/aec3/: adaptive_fir_filter.cc
